<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab0_r2</name>
  <version>0.0.0</version>
  <description>Lab 0 package adjusted for ros2</description>
  <maintainer email="lk@oregonstate.edu">lk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- added for ros2 adjustment -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <!-- changed next line for ros2 adjustment -->
    <build_type>ament_python</build_type>
  </export>
</package>
